add directions, fix safe area on help page

--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -112,6 +112,7 @@
 	},
 	"sponsors": {
 		"our_sponsors": "Nos commanditaires",
+		"ceed": "CEED offre une formation pratique en conception technique et en entrepreneuriat, en connectant les étudiants avec l'industrie pour développer des produits et des compétences commerciales.",
 		"manulife": "Un groupe international de services financiers de premier plan qui aide les gens à prendre des décisions plus faciles et à vivre mieux.",
 		"belairdirect": "Une compagnie d'assurance canadienne offrant des solutions d'assurance auto et habitation avec des outils numériques innovants et un service personnalisé.",
 		"td": "Engagée à aider les entreprises canadiennes à croître grâce à des solutions bancaires sur mesure et des conseils d'experts."
