--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -112,6 +112,7 @@
 	},
 	"sponsors": {
 		"our_sponsors": "Our Sponsors",
+		"ceed": "CEED provides hands-on engineering design and entrepreneurship education, connecting students with industry to develop products and business skills.",
 		"manulife": "A leading international financial services group that helps people make their decisions easier and lives better.",
 		"belairdirect": "A Canadian insurance company offering car and home insurance with innovative digital tools and personalized service.",
 		"td": "Committed to helping Canadian businesses grow with tailored banking solutions and expert advice."
