add sign up links on schedule page

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -80,7 +80,8 @@
 		"schedule": "Schedule",
 		"start": "From",
 		"end": "Until",
-		"where": "Where"
+		"where": "Where",
+		"reserve_spot": "Reserve your spot"
 	},
 	"scan": {
 		"title": "Scan",
